--- a/css/style.green.css
+++ b/css/style.green.css
@@ -2603,9 +2603,12 @@ fieldset[disabled] .btn-template-primary.active {
 #copyright {
   background: #333;
   color: #ccc;
-  padding: 50px 0;
+  /*padding: 50px 0;*/
   font-size: 12px;
   line-height: 28px;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
 }
 #copyright p {
   margin: 0;
